<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context=".activity.MypageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/people" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login"
                android:layout_width="25sp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/button_login" />
            <TextView
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" />
            <Button
                android:id="@+id/enroll"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:text="@string/button_enroll" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/want"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/cardview_light_background"
            android:drawableTop="@drawable/heart"
            android:text="@string/button_want"
            android:textSize="14sp" />

        <Button
            android:id="@+id/watched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/cardview_light_background"
            android:drawableTop="@drawable/star"
            android:text="@string/button_watched"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/cardview_light_background"
            android:drawableTop="@drawable/like"
            android:text="@string/button_like"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/cardview_light_background"
            android:drawableTop="@drawable/play"
            android:text="@string/button_mylist"
            android:textSize="14sp" />

        <Button
            android:id="@+id/mydown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/cardview_light_background"
            android:drawableTop="@drawable/down"
            android:text="@string/button_mydown"
            android:textSize="14sp" />

        <Button
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/cardview_light_background"
            android:drawableTop="@drawable/setting"
            android:text="@string/button_setting"
            android:textSize="14sp" />
    </LinearLayout>



</LinearLayout>